--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -22,7 +22,7 @@
 
 
   /* Search */
-  --search-bg: #F1EEE9;
+  --search-bg: #dddcd9;
   --search-hover: #E7E2DB;
   --search-focus: #FFFFFF;
 
@@ -34,7 +34,7 @@
 
 
   /* Borders */
-  --border: #E1DBD3;
+  --border: #bcb7b1;
   --border-light: #CFC7BC;
 
 
